--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
       href='https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800'
       rel='stylesheet' type='text/css'>
 
-  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="./css/clean-blog.css" rel="stylesheet">
 
   <link href="./css/general.css" rel="stylesheet">
@@ -83,7 +84,9 @@
       <div class="row text-box">
         <div class="col-xs-6" style="border-right: 1px solid gray;">
           <p>
-            In 2015, 63.0% native speakers of German (of which 59.5% speak Swiss German and 10.4% Standard German at home); 22.7% French (mostly Swiss French, but including some Arpitan dialects); 8.4% Italian (mostly Swiss Italian, but including Lombard dialects); and 0.6% Romansh.
+            In 2015, 63.0% native speakers of German (of which 59.5% speak Swiss German and 10.4% Standard German at
+            home); 22.7% French (mostly Swiss French, but including some Arpitan dialects); 8.4% Italian (mostly Swiss
+            Italian, but including Lombard dialects); and 0.6% Romansh.
           </p>
           <table style="text-align:right">
             <tbody>
@@ -163,10 +166,14 @@
               <td>1.13%</td>
             </tr>
 
-            </tbody></table>
+            </tbody>
+          </table>
         </div>
         <div class="col-xs-6">
-          <p>The German region (Deutschschweiz) is roughly in the east, north and center; the French part (la Romandie) in the west and the Italian area (Svizzera italiana) in the south. There remains a small Romansh-speaking native population in Graubünden in the east. The cantons of Fribourg, Bern and Valais are officially bilingual; the canton of Graubünden is officially trilingual.</p>
+          <p>The German region (Deutschschweiz) is roughly in the east, north and center; the French part (la Romandie)
+            in the west and the Italian area (Svizzera italiana) in the south. There remains a small Romansh-speaking
+            native population in Graubünden in the east. The cantons of Fribourg, Bern and Valais are officially
+            bilingual; the canton of Graubünden is officially trilingual.</p>
           <img src="https://upload.wikimedia.org/wikipedia/commons/9/9f/Map_Languages_CH.png" width="100%">
         </div>
       </div>
@@ -174,7 +181,37 @@
     </div>
   </div>
 </div>
-<div class='tableauPlaceholder' id='viz1513523508130' style='position: relative'><noscript><a href='#'><img alt='Language Differences ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tw&#47;tweets_7&#47;LanguageDifferences&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='tweets_7&#47;LanguageDifferences' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tw&#47;tweets_7&#47;LanguageDifferences&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1513523508130');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1000px';vizElement.style.height='827px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1513523508130' style='position: relative'>
+  <noscript><a href='#'><img alt='Language Differences '
+                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tw&#47;tweets_7&#47;LanguageDifferences&#47;1_rss.png'
+                             style='border: none'/></a></noscript>
+  <object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
+    <param name='embed_code_version' value='3'/>
+    <param name='site_root' value=''/>
+    <param name='name' value='tweets_7&#47;LanguageDifferences'/>
+    <param name='tabs' value='no'/>
+    <param name='toolbar' value='yes'/>
+    <param name='static_image'
+           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tw&#47;tweets_7&#47;LanguageDifferences&#47;1.png'/>
+    <param name='animate_transition' value='yes'/>
+    <param name='display_static_image' value='yes'/>
+    <param name='display_spinner' value='yes'/>
+    <param name='display_overlay' value='yes'/>
+    <param name='display_count' value='yes'/>
+    <param name='filter' value='publish=yes'/>
+  </object>
+</div>
+<script type='text/javascript'>
+  var divElement = document.getElementById('viz1513523508130');
+  var vizElement = divElement.getElementsByTagName('object')[0];
+  vizElement.style.width = '1000px';
+  vizElement.style.height = '827px';
+  var scriptElement = document.createElement('script');
+  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+  vizElement.parentNode.insertBefore(scriptElement, vizElement);
+</script>
+
 
 <div class="container">
   <div class="row">
@@ -189,18 +226,75 @@
             In the graph below we are seeing 4 different map. In each of them one language distribution is in use.
           </h4>
         </a>
+      </div>
     </div>
   </div>
 </div>
 
-<div class='tableauPlaceholder' id='viz1513529564498' style='position: relative'><noscript><a href='#'><img alt='Language Ratios ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7D&#47;7DMXDRFDJ&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='path' value='shared&#47;7DMXDRFDJ' /> <param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7D&#47;7DMXDRFDJ&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1513529564498');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1000px';vizElement.style.height='827px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1513529564498' style='position: relative'>
+  <noscript><a href='#'><img alt='Language Ratios '
+                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7D&#47;7DMXDRFDJ&#47;1_rss.png'
+                             style='border: none'/></a></noscript>
+  <object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
+    <param name='embed_code_version' value='3'/>
+    <param name='path' value='shared&#47;7DMXDRFDJ'/>
+    <param name='toolbar' value='yes'/>
+    <param name='static_image'
+           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7D&#47;7DMXDRFDJ&#47;1.png'/>
+    <param name='animate_transition' value='yes'/>
+    <param name='display_static_image' value='yes'/>
+    <param name='display_spinner' value='yes'/>
+    <param name='display_overlay' value='yes'/>
+    <param name='display_count' value='yes'/>
+    <param name='filter' value='publish=yes'/>
+  </object>
+</div>
+<script type='text/javascript'>
+  var divElement = document.getElementById('viz1513529564498');
+  var vizElement = divElement.getElementsByTagName('object')[0];
+  vizElement.style.width = '1000px';
+  vizElement.style.height = '827px';
+  var scriptElement = document.createElement('script');
+  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+  vizElement.parentNode.insertBefore(scriptElement, vizElement);
+</script>
 
+<div class='tableauPlaceholder' id='viz1513534080382' style='position: relative'>
+  <noscript><a href='#'><img alt='Dashboard 3 '
+                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;MK&#47;MKDKPGWBN&#47;1_rss.png'
+                             style='border: none'/></a></noscript>
+  <object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
+    <param name='embed_code_version' value='3'/>
+    <param name='path' value='shared&#47;MKDKPGWBN'/>
+    <param name='toolbar' value='yes'/>
+    <param name='static_image'
+           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;MK&#47;MKDKPGWBN&#47;1.png'/>
+    <param name='animate_transition' value='yes'/>
+    <param name='display_static_image' value='yes'/>
+    <param name='display_spinner' value='yes'/>
+    <param name='display_overlay' value='yes'/>
+    <param name='display_count' value='yes'/>
+    <param name='filter' value='publish=yes'/>
+  </object>
+</div>
+<script type='text/javascript'>
+  var divElement = document.getElementById('viz1513534080382');
+  var vizElement = divElement.getElementsByTagName('object')[0];
+  vizElement.style.width = '1000px';
+  vizElement.style.height = '827px';
+  var scriptElement = document.createElement('script');
+  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+  vizElement.parentNode.insertBefore(scriptElement, vizElement);
+</script>
 <!-- Footer -->
 <footer>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
-        <p class="copyright text-muted">École Polytechnique Fédérale de Lausanne, Applied Data Science Project - 2017</p>
+        <p class="copyright text-muted">École Polytechnique Fédérale de Lausanne, Applied Data Science Project -
+          2017</p>
       </div>
     </div>
   </div>
