--- a/emotions.html
+++ b/emotions.html
@@ -61,25 +61,14 @@
   <div class="row">
     <div class="col-lg-8 col-md-10 col-centered text-center">
       <h1>
-        Timestamp Analyses
+        Language Analyses
       </h1>
       <p>
-        In this section you will find some time insights about Twitter usage in Switzerland
+        In this section you will find some insights about language usage in Switzerland
       </p>
     </div>
   </div>
 </div>
-
-<!-- Footer -->
-<footer>
-
-
-  <div class="right">
-    <a href="#">
-      <small>Languages</small>
-      <i class="fa fa-3x fa-arrow-circle-right" aria-hidden="true"></i>
-    </a>
-  </div>
 
   <div class="container">
     <div class="row">
