--- a/languages.html
+++ b/languages.html
@@ -291,23 +291,22 @@
   scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
   vizElement.parentNode.insertBefore(scriptElement, vizElement);
 </script>
-<!-- Footer -->
+
+<div class="left">
+  <a href="/index.html">
+    <i class="fa fa-3x fa-arrow-circle-left" aria-hidden="true"></i>
+    <small>Timestamp Analysis</small>
+  </a>
+</div>
+
+<div class="right">
+  <a href="/emotions.html">
+    <small>Emotions And Peaks</small>
+    <i class="fa fa-3x fa-arrow-circle-right" aria-hidden="true"></i>
+  </a>
+</div>
+
 <footer>
-
-  <div class="left">
-    <a href="#">
-      <i class="fa fa-3x fa-arrow-circle-left" aria-hidden="true"></i>
-      <small>Timestamp Analysis</small>
-    </a>
-  </div>
-
-  <div class="right">
-    <a href="#">
-      <small>Emotions And Peaks</small>
-      <i class="fa fa-3x fa-arrow-circle-right" aria-hidden="true"></i>
-    </a>
-  </div>
-
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
