--- a/emotions.html
+++ b/emotions.html
@@ -55,21 +55,17 @@
     </div>
   </div>
 </header>
+<div class='tableauPlaceholder' id='viz1513685053765' style='position: relative'><noscript><a href='#'><img alt='Sentiment 1 ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;em&#47;emotion_2&#47;Sentiment1&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='emotion_2&#47;Sentiment1' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;em&#47;emotion_2&#47;Sentiment1&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1513685053765');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1000px';vizElement.style.height='627px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1513684602211' style='position: relative'><noscript><a href='#'><img alt='Emotional timestamp ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;em&#47;emotion_2&#47;Emotionaltimestamp&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='emotion_2&#47;Emotionaltimestamp' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;em&#47;emotion_2&#47;Emotionaltimestamp&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /><param name='filter' value='publish=yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1513684602211');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1000px';vizElement.style.height='527px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
-<!-- Main Content -->
-<div class="container">
-  <div class="row">
-    <div class="col-lg-8 col-md-10 col-centered text-center">
-      <h1>
-        Language Analyses
-      </h1>
-      <p>
-        In this section you will find some insights about language usage in Switzerland
-      </p>
-    </div>
-  </div>
+<div class="left">
+  <a href="/languages.html">
+    <i class="fa fa-3x fa-arrow-circle-left" aria-hidden="true"></i>
+    <small>Language Analysis</small>
+  </a>
 </div>
 
+<footer>
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
