--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 </div>
 
 <div class="right">
-  <a href="/languages.html">
+  <a href="languages.html">
     <small>Languages</small>
     <i class="fa fa-3x fa-arrow-circle-right" aria-hidden="true"></i>
   </a>
