--- a/languages.html
+++ b/languages.html
@@ -293,14 +293,14 @@
 </script>
 
 <div class="left">
-  <a href="/index.html">
+  <a href="index.html">
     <i class="fa fa-3x fa-arrow-circle-left" aria-hidden="true"></i>
     <small>Timestamp Analysis</small>
   </a>
 </div>
 
 <div class="right">
-  <a href="/emotions.html">
+  <a href="emotions.html">
     <small>Emotions And Peaks</small>
     <i class="fa fa-3x fa-arrow-circle-right" aria-hidden="true"></i>
   </a>
