--- a/index.html
+++ b/index.html
@@ -70,13 +70,128 @@
   </div>
 </div>
 
+<div class='tableauPlaceholder' id='viz1513692460191' style='position: relative'>
+  <noscript><a href='#'><img alt='month '
+                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;month&#47;1_rss.png'
+                             style='border: none'/></a></noscript>
+  <object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
+    <param name='embed_code_version' value='3'/>
+    <param name='site_root' value=''/>
+    <param name='name' value='project5_6&#47;month'/>
+    <param name='tabs' value='no'/>
+    <param name='toolbar' value='yes'/>
+    <param name='static_image'
+           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;month&#47;1.png'/>
+    <param name='animate_transition' value='yes'/>
+    <param name='display_static_image' value='yes'/>
+    <param name='display_spinner' value='yes'/>
+    <param name='display_overlay' value='yes'/>
+    <param name='display_count' value='yes'/>
+  </object>
+</div>
+<script type='text/javascript'>                    var divElement = document.getElementById('viz1513692460191');
+var vizElement = divElement.getElementsByTagName('object')[0];
+vizElement.style.width = '1200px';
+vizElement.style.height = '927px';
+var scriptElement = document.createElement('script');
+scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+<div class='tableauPlaceholder' id='viz1513692481123' style='position: relative'>
+  <noscript><a href='#'><img alt='week '
+                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;week&#47;1_rss.png'
+                             style='border: none'/></a></noscript>
+  <object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
+    <param name='embed_code_version' value='3'/>
+    <param name='site_root' value=''/>
+    <param name='name' value='project5_6&#47;week'/>
+    <param name='tabs' value='no'/>
+    <param name='toolbar' value='yes'/>
+    <param name='static_image'
+           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;week&#47;1.png'/>
+    <param name='animate_transition' value='yes'/>
+    <param name='display_static_image' value='yes'/>
+    <param name='display_spinner' value='yes'/>
+    <param name='display_overlay' value='yes'/>
+    <param name='display_count' value='yes'/>
+  </object>
+</div>
+
+
+<script type='text/javascript'>                    var divElement = document.getElementById('viz1513692481123');
+var vizElement = divElement.getElementsByTagName('object')[0];
+vizElement.style.width = '1200px';
+vizElement.style.height = '927px';
+var scriptElement = document.createElement('script');
+scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
 <div class="right">
   <a href="languages.html">
     <small>Languages</small>
     <i class="fa fa-3x fa-arrow-circle-right" aria-hidden="true"></i>
   </a>
 </div>
-<div class='tableauPlaceholder' id='viz1513685149133' style='position: relative'><noscript><a href='#'><img alt='day ' src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;day&#47;1_rss.png' style='border: none' /></a></noscript><object class='tableauViz'  style='display:none;'><param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' /> <param name='embed_code_version' value='3' /> <param name='site_root' value='' /><param name='name' value='project5_6&#47;day' /><param name='tabs' value='no' /><param name='toolbar' value='yes' /><param name='static_image' value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;day&#47;1.png' /> <param name='animate_transition' value='yes' /><param name='display_static_image' value='yes' /><param name='display_spinner' value='yes' /><param name='display_overlay' value='yes' /><param name='display_count' value='yes' /></object></div>                <script type='text/javascript'>                    var divElement = document.getElementById('viz1513685149133');                    var vizElement = divElement.getElementsByTagName('object')[0];                    vizElement.style.width='1200px';vizElement.style.height='927px';                    var scriptElement = document.createElement('script');                    scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';                    vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+<div class='tableauPlaceholder' id='viz1513685149133' style='position: relative'>
+  <noscript><a href='#'><img alt='day '
+                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;day&#47;1_rss.png'
+                             style='border: none'/></a></noscript>
+  <object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
+    <param name='embed_code_version' value='3'/>
+    <param name='site_root' value=''/>
+    <param name='name' value='project5_6&#47;day'/>
+    <param name='tabs' value='no'/>
+    <param name='toolbar' value='yes'/>
+    <param name='static_image'
+           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;day&#47;1.png'/>
+    <param name='animate_transition' value='yes'/>
+    <param name='display_static_image' value='yes'/>
+    <param name='display_spinner' value='yes'/>
+    <param name='display_overlay' value='yes'/>
+    <param name='display_count' value='yes'/>
+  </object>
+</div>
+<script type='text/javascript'>                    var divElement = document.getElementById('viz1513685149133');
+var vizElement = divElement.getElementsByTagName('object')[0];
+vizElement.style.width = '1200px';
+vizElement.style.height = '927px';
+var scriptElement = document.createElement('script');
+scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+<div class='tableauPlaceholder' id='viz1513692438468' style='position: relative'>
+  <noscript><a href='#'><img alt='hour '
+                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;hour&#47;1_rss.png'
+                             style='border: none'/></a></noscript>
+  <object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
+    <param name='embed_code_version' value='3'/>
+    <param name='site_root' value=''/>
+    <param name='name' value='project5_6&#47;hour'/>
+    <param name='tabs' value='no'/>
+    <param name='toolbar' value='yes'/>
+    <param name='static_image'
+           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;pr&#47;project5_6&#47;hour&#47;1.png'/>
+    <param name='animate_transition' value='yes'/>
+    <param name='display_static_image' value='yes'/>
+    <param name='display_spinner' value='yes'/>
+    <param name='display_overlay' value='yes'/>
+    <param name='display_count' value='yes'/>
+  </object>
+</div>
+
+
+<script type='text/javascript'>                    var divElement = document.getElementById('viz1513692438468');
+var vizElement = divElement.getElementsByTagName('object')[0];
+vizElement.style.width = '1200px';
+vizElement.style.height = '927px';
+var scriptElement = document.createElement('script');
+scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
 <footer>
 
   <div class="container">
@@ -100,8 +215,9 @@
     crossorigin="anonymous"></script>
 
 <script>
-  $('.right').fadeOut(0); $('.left').fadeOut(0);
-  $(document).scroll(function() {
+  $('.right').fadeOut(0);
+  $('.left').fadeOut(0);
+  $(document).scroll(function () {
     var y = $(this).scrollTop();
     if (y > 500) {
       $('.right, .left').fadeIn();
