--- a/languages.html
+++ b/languages.html
@@ -93,7 +93,7 @@
           <table style="text-align:right; width: 100%">
             <tbody>
             <tr>
-              <th >Language</th>
+              <th>Language</th>
               <th colspan="2"><br>Mother Lang</th>
               <th colspan="2"><br>Main Lang</th>
             </tr>
@@ -234,17 +234,19 @@
   </div>
 </div>
 
-<div class='tableauPlaceholder' id='viz1513529564498' style='position: relative'>
+<div class='tableauPlaceholder' id='viz1513690191939' style='position: relative'>
   <noscript><a href='#'><img alt='Language Ratios '
-                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7D&#47;7DMXDRFDJ&#47;1_rss.png'
+                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tw&#47;tweets_7&#47;LanguageRatios&#47;1_rss.png'
                              style='border: none'/></a></noscript>
   <object class='tableauViz' style='display:none;'>
     <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
     <param name='embed_code_version' value='3'/>
-    <param name='path' value='shared&#47;7DMXDRFDJ'/>
+    <param name='site_root' value=''/>
+    <param name='name' value='tweets_7&#47;LanguageRatios'/>
+    <param name='tabs' value='no'/>
     <param name='toolbar' value='yes'/>
     <param name='static_image'
-           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;7D&#47;7DMXDRFDJ&#47;1.png'/>
+           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tw&#47;tweets_7&#47;LanguageRatios&#47;1.png'/>
     <param name='animate_transition' value='yes'/>
     <param name='display_static_image' value='yes'/>
     <param name='display_spinner' value='yes'/>
@@ -253,27 +255,30 @@
     <param name='filter' value='publish=yes'/>
   </object>
 </div>
-<script type='text/javascript'>
-  var divElement = document.getElementById('viz1513529564498');
-  var vizElement = divElement.getElementsByTagName('object')[0];
-  vizElement.style.width = '1000px';
-  vizElement.style.height = '827px';
-  var scriptElement = document.createElement('script');
-  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-  vizElement.parentNode.insertBefore(scriptElement, vizElement);
-</script>
+<script type='text/javascript'>                    var divElement = document.getElementById('viz1513690191939');
+var vizElement = divElement.getElementsByTagName('object')[0];
+vizElement.style.width = '1000px';
+vizElement.style.height = '827px';
+var scriptElement = document.createElement('script');
+scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
-<div class='tableauPlaceholder' id='viz1513534080382' style='position: relative'>
+
+<!--OTHER LANGUAGES-->
+
+<div class='tableauPlaceholder' id='viz1513690274352' style='position: relative'>
   <noscript><a href='#'><img alt='Dashboard 3 '
-                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;MK&#47;MKDKPGWBN&#47;1_rss.png'
+                             src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tw&#47;tweets_7&#47;Dashboard3&#47;1_rss.png'
                              style='border: none'/></a></noscript>
   <object class='tableauViz' style='display:none;'>
     <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F'/>
     <param name='embed_code_version' value='3'/>
-    <param name='path' value='shared&#47;MKDKPGWBN'/>
+    <param name='site_root' value=''/>
+    <param name='name' value='tweets_7&#47;Dashboard3'/>
+    <param name='tabs' value='no'/>
     <param name='toolbar' value='yes'/>
     <param name='static_image'
-           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;MK&#47;MKDKPGWBN&#47;1.png'/>
+           value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;tw&#47;tweets_7&#47;Dashboard3&#47;1.png'/>
     <param name='animate_transition' value='yes'/>
     <param name='display_static_image' value='yes'/>
     <param name='display_spinner' value='yes'/>
@@ -282,15 +287,15 @@
     <param name='filter' value='publish=yes'/>
   </object>
 </div>
-<script type='text/javascript'>
-  var divElement = document.getElementById('viz1513534080382');
-  var vizElement = divElement.getElementsByTagName('object')[0];
-  vizElement.style.width = '1000px';
-  vizElement.style.height = '827px';
-  var scriptElement = document.createElement('script');
-  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
-  vizElement.parentNode.insertBefore(scriptElement, vizElement);
-</script>
+<script type='text/javascript'>                    var divElement = document.getElementById('viz1513690274352');
+var vizElement = divElement.getElementsByTagName('object')[0];
+vizElement.style.width = '1000px';
+vizElement.style.height = '827px';
+var scriptElement = document.createElement('script');
+scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js';
+vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+
+
 
 <div class="left">
   <a href="index.html">
@@ -328,8 +333,9 @@
     crossorigin="anonymous"></script>
 
 <script>
-  $('.right').fadeOut(0); $('.left').fadeOut(0);
-  $(document).scroll(function() {
+  $('.right').fadeOut(0);
+  $('.left').fadeOut(0);
+  $(document).scroll(function () {
     var y = $(this).scrollTop();
     if (y > 500) {
       $('.right, .left').fadeIn();
