--- a/emotions.html
+++ b/emotions.html
@@ -178,7 +178,7 @@ vizElement.parentNode.insertBefore(scriptElement, vizElement);                </
   <div class="row text-box">
     <div class="col-lg-8 col-md-10 col-centered">
       <p>
-        As you can see from the first graph, 21.07.2016, 1.09.2016, 10.10.2016 are special days for the Swiss people. During these days there is some soccer success of Swiss National Team, and some olympic success(summer) on these days. But we are not sure the reason of these occurrence.
+        As you can see from the first graph, 21.07.2016, 1.09.2016, 10.10.2016 are special days for the Swiss people. During these days there is some soccer success of Swiss National Team, and some olympic success(summer). But we are not sure the real reason of these occurrence.
       </p>
       <p>
         By this way, we are trying to answer these question:
@@ -240,7 +240,7 @@ vizElement.parentNode.insertBefore(scriptElement, vizElement);                </
   <div class="row text-box">
     <div class="col-lg-8 col-md-10 col-centered">
       <p>
-        As you can see from the map and pie charts, English have very big promotion. Be aware that this graph is city based not the region. (To be a part of the pie charts tweet counts ot that language must be more then 1000, because of this some cities are shown as pure circle.)
+        As you can see from the map and pie charts, English are as popular as official languages. Be aware that this graph is city based not the region. (To be a part of the pie charts tweet counts ot that language must be more then 1000, because of this some cities are shown as pure circle.)
       </p>
       <p>
         By this way, we are trying to answer these question:
